<resources>
  <string name="app_name">Popit Tv</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>


  <string name="search">Search</string>
  <string name="funny_nav">Funny</string>
  <string name="reality_nav">Reality</string>
  <string name="learning_nav">Learning</string>
  <string name="farsi_nav">Farsi</string>
  <string name="games_nav">Games</string>
  <string name="title_activity_fullscreen">FullscreenActivity</string>
  <string name="dummy_button">Dummy Button</string>
  <string name="dummy_content">DUMMY\nCONTENT</string>

  <string name="parentBookmark">Your\nSave</string>
  <string name="parentSubscribe">Your\nSubscribe</string>
  <string name="parentWatchLater">Your\nNextTime</string>
  <string name="parentHistoey">Your\nHistory</string>
  <string name="parentDownload">Your\nDownload</string>
  <string name="parentLike">Your\nLike</string>
  <string name="age">Age</string>
  <string name="subscribe">Subscribe</string>
  <string name="not_acccsec_code">کد ویژه دسترسی یافت نشد - برای استفاده از محتوا و ملحق شدن به دوستانتان ابتدا یکی از کدهای زیر را انتخاب کنید .</string>
  <string name="fun_video">ویدئوهای فان</string>
  <string name="fav_title">محبوب ترین</string>
  <string name="mostview_title">پربازدیدترین</string>
  <string name="dialog_login_send_num">ارسال</string>
  <string name="dialog_login_message">برای دسترسی به محتوا نیاز به ثبت و تایید میباشد</string>
  <string name="dialog_login_negative">الان نه ، ادامه گشت و گذار</string>
  <string name="username">username</string>
  <string name="password">password</string>
  <string name="hint_number">روی عکس یا کادر زرد روبرو کلیک کنید---))</string>
  <string name="hint_textPay">"  برای دستسرس و دریافت کد اشتراک دکمه روبرو را انتخاب کنید ---))</string>
  <string name="hint_user_name">بدون نام</string>
  <string name="exite">خروج از حساب</string>
  <string name="enter">ورود به حساب</string>
  <string name="netLowPrice">صرفه جویی در بسته اینترنتی</string>
  <string name="showAllChannelFa">مشاهده\nهمه\n کانال ها</string>
  <string name="downloadInstal">"نصب شده </string>
  <string name="install">install</string>
  <string name="payment1mounth">دریافت کد دسترسی با اعتبار 1 ماه\n به مبلغ 9000 هزارتومان</string>
  <string name="payment3mounth">دریافت کد دسترسی با اعتبار 3 ماه\n به مبلغ 25000 هزارتومان</string>
  <string name="payment6mounth">دریافت کد دسترسی با اعتبار 6 ماه\n به مبلغ 50000 هزارتومان</string>
  <string name="sendAgainPhoneNumber">اگر بعد از مدت کوتاهی پیام حاوی کد تایید را دریافت نکرده اید از این صفحه خارج شوید و دوباره و با دقت بیشتری شماره خود و یا والدین خود را وارد کنید.</string>
  <string name="offer_ege">سن پیشنهادی</string>
  <string name="all_funny_videos_tag">All Funny \nVideos</string>
  <string name="all_funny_videos_tagFarsi">All Farsi \nVideos</string>
  <string name="all_funny_videos_tagreality">All Reality \nVideos</string>
  <string name="all_funny_videos_tagStudy">All Study \nVideos</string>
  <string name="vid_farsi_tag">ویدیوهای فارسی \nاتفاقی</string>
  <string name="best_month">ویدیوهای برتر ماه</string>
  <string name="new_best">تازه محبوب شده ها</string>

</resources>