<?xml version="1.0" encoding="utf-8"?>

  <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  android:layoutDirection="ltr"
    android:background="@drawable/gradiant4"
    tools:context=".activity.PaymentActivity">

    <ImageView
      android:id="@+id/imageView2"
      android:layout_width="510dp"
      android:layout_height="313dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0"
      app:srcCompat="@drawable/parent_kid_happy" />


  <Button
    android:id="@+id/btnCode1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_tag6"
    android:fontFamily="@font/lalezar_regular"
    android:paddingStart="@dimen/plane_16"
    android:paddingTop="@dimen/plane_04"
    android:paddingEnd="@dimen/plane_16"
    android:paddingBottom="@dimen/plane_04"
    android:text="@string/payment1mounth"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.9"
    app:layout_constraintVertical_bias=".5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@color/black"
      android:text="6 ماه اعتبار  50هزارتومان"
      app:layout_constraintBottom_toTopOf="@+id/btnCode3"
      app:layout_constraintEnd_toEndOf="@+id/btnCode3"
      app:layout_constraintStart_toStartOf="@+id/btnCode3" />

    <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@color/black"
      android:text="1 ماه اعتبار  9هزارتومان"
      app:layout_constraintBottom_toTopOf="@+id/btnCode1"
      app:layout_constraintEnd_toEndOf="@+id/btnCode1"
      app:layout_constraintHorizontal_bias="0.513"
      app:layout_constraintStart_toStartOf="@+id/btnCode1" />

    <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@color/black"
      android:text="3 ماه اعتبار  25هزارتومان"
      app:layout_constraintBottom_toTopOf="@+id/btnCode2"
      app:layout_constraintEnd_toEndOf="@+id/btnCode2"
      app:layout_constraintHorizontal_bias="0.507"
      app:layout_constraintStart_toStartOf="@+id/btnCode2" />

  <Button
    android:id="@+id/btnCode3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_tag6"
    android:fontFamily="@font/lalezar_regular"
    android:paddingStart="@dimen/plane_16"
    android:paddingTop="@dimen/plane_04"
    android:paddingEnd="@dimen/plane_16"
    android:paddingBottom="@dimen/plane_04"
    android:text="@string/payment6mounth"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.9"
    app:layout_constraintVertical_bias=".9"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <Button
    android:id="@+id/btnCode2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_tag6"
    android:fontFamily="@font/lalezar_regular"
    android:paddingStart="@dimen/plane_16"
    android:paddingTop="@dimen/plane_04"
    android:paddingEnd="@dimen/plane_16"
    android:paddingBottom="@dimen/plane_04"
    android:text="@string/payment3mounth"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.9"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias=".15" />

  <Button
    android:id="@+id/btnBack_Payment"
    android:layout_width="124dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_btn_bg"
    android:elevation="@dimen/plane_06"
    android:text="back"
    app:layout_constraintBottom_toBottomOf="@+id/btnCode3"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.202"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView4" />

  <TextView
    android:id="@+id/textView5"
    android:layout_width="78dp"
    android:layout_height="24dp"
    android:background="@color/popit_orange"
    android:text="1"
    android:textAlignment="center"
    android:textColor="@color/black"
    app:layout_constraintBottom_toBottomOf="@+id/btnBack_Payment"
    app:layout_constraintStart_toEndOf="@+id/btnBack_Payment"
    app:layout_constraintTop_toTopOf="@+id/btnBack_Payment" />

  <TextView
    android:id="@+id/textView8"
    android:layout_width="@dimen/plane_24"
    android:layout_height="23dp"
    android:background="@drawable/back_player_rv1"
    android:text="6"
    android:textAlignment="center"
    android:textColor="@color/black"
    app:layout_constraintBottom_toBottomOf="@+id/btnCode3"
    app:layout_constraintStart_toEndOf="@+id/btnCode3"
    app:layout_constraintTop_toTopOf="@+id/btnCode3" />

  <TextView
    android:id="@+id/textView813"
    android:layout_width="@dimen/plane_24"
    android:layout_height="23dp"
    android:background="@drawable/back_player_rv1"
    android:text="1"
    android:textAlignment="center"
    android:textColor="@color/black"
    app:layout_constraintBottom_toBottomOf="@+id/btnCode1"
    app:layout_constraintStart_toEndOf="@+id/btnCode1"
    app:layout_constraintTop_toTopOf="@+id/btnCode1" />

  <TextView
    android:id="@+id/textView814"
    android:layout_width="@dimen/plane_24"
    android:layout_height="23dp"
    android:background="@drawable/back_player_rv1"
    android:text="3"
    android:textAlignment="center"
    android:textColor="@color/black"
    app:layout_constraintBottom_toBottomOf="@+id/btnCode2"
    app:layout_constraintStart_toEndOf="@+id/btnCode2"
    app:layout_constraintTop_toTopOf="@+id/btnCode2" />

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="4dp"
      app:layout_constraintBottom_toTopOf="@+id/textView5"
      app:layout_constraintEnd_toEndOf="@+id/textView5"
      app:srcCompat="@drawable/ic_baseline_sms_failed_24" />


  </androidx.constraintlayout.widget.ConstraintLayout>


